- fixed video container size on mobile

--- a/styles.css
+++ b/styles.css
@@ -327,6 +327,26 @@ p {
     width: 30px;
 }
 
+.video-container {
+    max-width: 40rem;
+    max-height: 30rem;
+}
+
+.iframeVideo {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+
+.iframeVideo iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
  /* Animations */
 
